2008-12-23  Aaron Bockover  <abock@gnome.org>

	* content/uri-player.xul: Removed, merged into standalone-player.xul

	* content/standalone-player-hidecontrols.xul:
	* content/standalone-player-hidecontrols.css: XUL and CSS overlay to 
	hide controls when running inside of a browser

	* content/standalone-player.xul: A XUL shell that embeds the media player
	that can act as a fully standalone player, like a mini Totem, when
	invoked with firefox -chrome

	* content/standalone-player.js: Application logic for the standalone
	player

	* content/moon-media-content-listener.js: Fix chrome URI

	* content/player/player.js: Added a public Fullscreen method

	* content/moon-utilities.js: Some Utility functions

2008-12-23  Aaron Bockover  <abock@gnome.org>

	* content/uri-player.xul: decodeURI before setting on the player

2008-12-23  Aaron Bockover  <abockover@novell.com>

	* content/moon-media-content-listener.js: Listener that intercepts content 
	type that are supported by the player, redirects requests to the internal
	XUL Silverlight player

	* content/uri-player.xul: Silverlight shell in XUL that embeds the player

	* content/test-moon-console.html:
	* content/moon-console.js: Added some more functions

	* content/moon-media-extension.js: Create and register the listener

	* content/player/player.js: Call XULMoonEmbeddedPlayerInit if defined

2008-12-19  Aaron Bockover  <abockover@novell.com>

	* content/moon-media-extension.js: Create a MoonMimeEditor

	* content/moon-mime-editor.js: Began working with the RDF service to 
	hopefully be able to add handlers for arbitrary mimetypes

	* content/moon-console.js: Wrote a good console class with a proper
	recursive object dumper that supports all types

	* content/test-moon-console.html: Test cases for the console

	* content/moon-media.xul: Load the console and the mime editor

2008-12-08  Aaron Bockover  <abockover@novell.com>

	* content/player/player.js: